<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenIR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="learn">Learn</string>
    <string name="power">Power</string>
    <string name="volume_up">Vol +</string>
    <string name="volume_down">Vol -</string>
    <string name="channel_up">CH+</string>
    <string name="channel_down">CH-</string>

    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>

    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="guide">Guide</string>

    <string name="inputs">Inputs</string>
    <string name="mute">Mute</string>
    <string name="select">Select</string>

    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>

    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="c3">C3</string>
    <string name="c4">C4</string>
    <string name="ok">OK</string>

</resources>
