<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ir_activity_irmain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alwaysDrawnWithCache="true"
    android:background="#333"
    android:clipChildren="true"
    android:horizontalSpacing="4dp"
    android:numColumns="auto_fit"
    android:padding="4dp"
    android:scrollbars="none"
    android:stretchMode="columnWidth"
    android:verticalSpacing="4dp"
    tools:context=".MainActivity" >
    
   <Switch
        android:textColor="#fff"
        android:id="@+id/leanswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	android:layout_row="25"
        android:layout_column="5"
        android:checked="false"
        android:text="@string/learn" />
    
   <com.buzz.bee.openir.irButton
        android:textColor="#fff"
	android:id="@+id/powerbtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="0"
	android:layout_column="0"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
	android:text="@string/power" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/volupbtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="4"
	android:layout_column="12"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/volume_up" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/voldwnbtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="6"
	android:layout_column="12"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/volume_down" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/chipbtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="4"
	android:layout_column="14"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/channel_up" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/chdwnbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="14"
        android:layout_row="6"
        android:height="@dimen/button_size"
        android:minHeight="48dip"
        android:minWidth="64dip"
        android:text="@string/channel_down"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d1btn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="4"
	android:layout_column="1"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit1" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d2btn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="4"
	android:layout_column="2"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit2" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d3btn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="4"
	android:layout_column="3"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit3" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d4btn"
 	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="5"
	android:layout_column="1"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit4" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d5btn"
 	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="5"
	android:layout_column="2"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit5" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d6btn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="5"
	android:layout_column="3"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit6" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d7btn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="6"
	android:layout_column="1"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit7" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d8btn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="6"
	android:layout_column="2"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit8" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d9btn"
 	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="6"
	android:layout_column="3"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit9" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/d0btn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="7"
	android:layout_column="2"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/digit0" />
    
    <Space
	android:layout_width="@dimen/button_size"
	android:layout_height="20dp"
	android:layout_row="0"
	android:layout_column="5"
	android:layout_columnSpan="10"/>

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/backbtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="2"
	android:layout_column="6"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/back" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/menubtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="2"
	android:layout_column="7"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/menu" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/guidebtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="2"
	android:layout_column="8"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/guide" />


    <TextView
        android:textColor="#fff"
        android:id="@+id/identify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	android:layout_row="0"
	android:layout_column="14"
        android:layout_marginBottom="13dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/arrowleftbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="12"
        android:layout_row="5"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/arrowl"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/arrowrightbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="14"
        android:layout_row="5"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/arrowr"
        android:textColorHint="#0000"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/inputbtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="2"
	android:layout_column="9"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/inputs" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/mutebtn"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_row="25"
	android:layout_column="0"
	android:width="@dimen/button_size"
	android:height="@dimen/button_size"
        android:text="@string/mute" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/selectbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="13"
        android:layout_row="5"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:text="@string/select"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/arrowdwnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="13"
        android:layout_row="6"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/arrowd"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/arrowupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="13"
        android:layout_row="4"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/arrowu"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/playbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="10"
        android:layout_row="25"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/arrowr"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="11"
        android:layout_row="25"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/stop"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/paueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="12"
        android:layout_row="25"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/pause"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/rewindBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="13"
        android:layout_row="25"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/rewind"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/fastfBtn"
        android:layout_column="14"
        android:layout_row="25"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/fastf"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/recBtn"
        android:layout_column="15"
        android:layout_row="25"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/record"
        android:width="@dimen/button_size" />

    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/redBtn"
        android:layout_column="6"
        android:layout_row="5"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/record"
        android:width="@dimen/button_size" />
        
    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/greenBtn"
        android:layout_column="7"
        android:layout_row="5"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/record"
        android:width="@dimen/button_size" />
                
    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/yellowBtn"
        android:layout_column="8"
        android:layout_row="5"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/record"
        android:width="@dimen/button_size" />
                        
    <com.buzz.bee.openir.irButton
        android:textColor="#fff"
        android:id="@+id/blueBtn"
        android:layout_column="9"
        android:layout_row="5"
        android:height="@dimen/button_size"
        android:minHeight="@dimen/button_size"
        android:minWidth="@dimen/button_size"
        android:scaleType="fitCenter"
        android:src="@drawable/record"
        android:width="@dimen/button_size" />


</GridLayout>
